[gd_scene load_steps=3 format=3 uid="uid://cnw46nsvilaxu"]

[ext_resource type="Script" uid="uid://b18g8850msbev" path="res://script/scene_2_2.gd" id="1_xqjcu"]
[ext_resource type="PackedScene" uid="uid://bao1ug3shuin" path="res://scene/level_template.tscn" id="2_xqjcu"]

[node name="scene_2_2" type="Node2D"]
script = ExtResource("1_xqjcu")

[node name="level_template" parent="." instance=ExtResource("2_xqjcu")]

[connection signal="button_structure_clicked" from="level_template" to="." method="_on_level_template_button_structure_clicked"]
[connection signal="done_working" from="level_template" to="." method="_on_level_template_done_working"]
[connection signal="text_clicked" from="level_template" to="." method="_on_level_template_text_clicked"]
